--- a/html/tela9.html
+++ b/html/tela9.html
@@ -26,7 +26,11 @@
             <div class="resto">
                 <br> <a href="tela10.html">
                     <h3>Perfil</h3>
-                </a>  
+                </a>
+                <br>
+                <a href="tela11.html">
+                    <h3> Ultimas Atividades </h3>
+                </a>
                 <br>
                 <a href="tela11.html">
                     <h3> Pagamentos </h3>
@@ -36,8 +40,8 @@
                     <h3> Sobre </h3>
                 </a>
                 <br>
-                <a href="tela11.html">
-                    <h3> Configuração </h3>
+                <a href="tela12.html">
+                    <h3> Ajustes </h3>
                 </a>
             </div>
         </div>
