randomize menu adm num

--- a/html/menuadm.html
+++ b/html/menuadm.html
@@ -28,22 +28,22 @@
         <section class="cards">
             <div class="card">
                 <div class="card-icon">🚆</div>
-                <div class="card-number">12</div>
+                <div class="card-number" id="trem-num">12</div>
                 <div class="card-text">Trens ativos neste momento</div>
             </div>
             <div class="card">
                 <div class="card-icon">⚠️</div>
-                <div class="card-number">3</div>
+                <div class="card-number" id="atraso-num">3</div>
                 <div class="card-text">Linhas com atrasos</div>
             </div>
             <div class="card">
                 <div class="card-icon">👥</div>
-                <div class="card-number">1.245</div>
+                <div class="card-number" id="passageiros-num">1.245</div>
                 <div class="card-text">Passageiros conectados agora</div>
             </div>
             <div class="card">
                 <div class="card-icon">💰</div>
-                <div class="card-number">R$ 18.500,00</div>
+                <div class="card-number" id="dinheiro-num">R$ 18.500,00</div>
                 <div class="card-text">Faturamento hoje</div>
             </div>
         </section>
@@ -59,6 +59,7 @@
     <footer>
 
     </footer>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
