--- a/html/tela12.html
+++ b/html/tela12.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Administração - TREMzz</title>
+    <title> Configurações - TREMzz</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/menuadm.css">
+    <link rel="stylesheet" href="../css/tela12.css">
     <link rel="shortcut icon" href="../img/tremlogo.png">
     <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
